--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,31 @@
 .loading-section {
 	height: 5rem;
 }
+
+textarea:focus,
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="date"]:focus,
+input[type="month"]:focus,
+input[type="time"]:focus,
+input[type="week"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="color"]:focus,
+.form-select:focus,
+.form-select:focus,
+.uneditable-input:focus {   
+  border-color: rgba(0, 0, 0, 0.4) !important;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.075) inset !important;
+  outline: 0 none !important;
+}
+
+.form-check-input:checked{
+	background-color: black !important;	
+	border-color: gray !important;
+}
